# rag

./: pyproject.toml
src/: rag.ipynb
