[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.11"
openai = "^1.13.3"
weaviate-client = "^4.5.1"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
pypdf = "^4.2.0"
chromadb = "^0.5.4"
tiktoken = "^0.7.0"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
